bug with minus scaling of text in bubbles (getting too narrow) make the previewer toolbar to adjust the width of actual image (not 100% of page width)

--- a/front/src/components/ImageEditor.scss
+++ b/front/src/components/ImageEditor.scss
@@ -1,5 +1,4 @@
 .bubble_base {
-  padding: 5px;
   background-color: white;
   text-align: center;
   display: flex;
@@ -13,7 +12,6 @@
   width: 100%;
   top: 0;
   bottom: 0;
-  padding: 5px;
   background-color: white;
   text-align: center;
   display: flex;
